fix overflow of player list

--- a/src/main.css
+++ b/src/main.css
@@ -19,6 +19,10 @@ body,
   height: 100%;
 }
 
+.spacer {
+  height: 15px;
+}
+
 #header {
   border-bottom: 1px solid black;
   padding: 15px;
@@ -32,6 +36,7 @@ body,
 #content {
   flex-grow: 1;
   display: flex;
+  overflow: hidden;
 }
 
 #players {
@@ -39,6 +44,7 @@ body,
   width: 50%;
   padding: 15px;
   flex-shrink: 0;
+  overflow-y: auto;
 }
 
 #phase-viewport {
